Création de requetes en DQL et QueryBuilder

--- a/templates/serie/detail.html.twig
+++ b/templates/serie/detail.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-todo : nom de la série
+{{ serie.name }}
 {% endblock %}
 
 {% block body %}
-    <h2>todo : le titre de la série + d'autres infos</h2>
+    <h2>{{ serie.name }}</h2>
+    <div>{{ serie.overview }}</div>
+    <div>{{ serie.vote }}</div>
 {% endblock %}
 
