--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -2,7 +2,14 @@
 
 {% block body %}
     <section>
-        todo : liste série
+        {% for serie in series %}
+            <article>
+                <a href="{{ path('serie_detail', {'id': serie.id}) }}" title="View serie's details">
+                    <img src="{{ asset('img/posters/series/' ~ serie.poster ) }}" alt="{{ serie.name }}">
+                </a>
+            </article>
+
+        {% endfor %}
     </section>
 {% endblock %}
 
