--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <section>
+    <section class="series-list">
         {% for serie in series %}
             <article>
                 <a href="{{ path('serie_detail', {'id': serie.id}) }}" title="View serie's details">
