Ajout des Seasons

--- a/templates/serie/detail.html.twig
+++ b/templates/serie/detail.html.twig
@@ -8,5 +8,25 @@
     <h2>{{ serie.name }}</h2>
     <div>{{ serie.overview }}</div>
     <div>{{ serie.vote }}</div>
+
+    <section class="seasons">
+        <h3>Seasons</h3>
+
+        {% for season in serie.seasons %}
+            <article>
+                <img src="{{ asset('img/posters/seasons/' ~ season.poster) }}"
+                     alt="{{ serie.name }} Season {{ season.number }}">
+                <div>
+                    <h4>Season {{ season.number }}</h4>
+                    {% if season.overview %}
+                        <div>{{ season.overview }}</div>
+                    {% endif %}
+                </div>
+            </article>
+        {% endfor %}
+    </section>
+
+
+
 {% endblock %}
 
