--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -4,7 +4,7 @@
     <section class="series-list">
         {% for serie in series %}
             <article>
-                <a href="{{ path('serie_detail', {'id': serie.id}) }}" title="View serie's details">
+                <a href="{{ path('serie_detail', {'id': serie.id}) }}" title="View serie's details - {{ serie.seasons | length }} seasons">
                     <img src="{{ asset('img/posters/series/' ~ serie.poster ) }}" alt="{{ serie.name }}">
                 </a>
             </article>
