--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,14 @@
             <h1><a href="{{ path('main_home') }}"><img src="{{ asset('img/logo.svg') }}"></a></h1>
             {% include('inc/nav.html.twig') %}
         </header>
+        {# read and display all flash messages #}
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
 
 
         <main>
