--- a/templates/serie/create.html.twig
+++ b/templates/serie/create.html.twig
@@ -6,7 +6,10 @@
 
 {% block body %}
     <div>
-        {# todo : afficher le formulaire #}
+        {{ form_start(serieForm) }}
+        {{ form_widget(serieForm) }}
+        <button>Send!</button>
+        {{ form_end(serieForm) }}
     </div>
 {% endblock %}
 
