--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -3,6 +3,21 @@
         <li><a href="{{ path('main_home') }}" title="Home">Home</a></li>
         <li><a href="{{ path('main_test') }}" title="Test">Test</a></li>
         <li><a href="{{ path('serie_list') }}" title="All series">Series</a></li>
-        <li><a href="{{ path('serie_create') }}" title="Create a new serie">Create</a></li>
+
+        {% if app.user %}
+            <li><a href="{{ path('app_logout') }}" title="Logout">Logout</a></li>
+            <li><a href="{{ path('serie_create') }}" title="Create a new serie">Create a new serie</a></li>
+            <li><a href="{{ path('season_create') }}" title="Create a new season">Create a new season</a></li>
+            {% if is_granted("ROLE_ADMIN") %}
+                <li><a href="{{ path('app_admin') }}" title="Admin">Admin</a></li>
+            {% endif %}
+        {% else %}
+            <li><a href="{{ path('app_login') }}" title="Login">Login</a></li>
+            <li><a href="{{ path('app_register') }}" title="Create a new account">Create a new account</a></li>
+        {% endif %}
+
+
+
+
     </ul>
 </nav>
